update dir name

--- a/notebook/test.ipynb
+++ b/notebook/test.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "c6341360",
    "metadata": {},
    "outputs": [],
    "source": [
     "# import data and cosine similarity matrix\n",
     "import joblib\n",
-    "data=joblib.load('..\\\\models\\\\data.pkl')\n",
-    "cosine_sim = joblib.load('..\\\\models\\\\cosine_sim.pkl')"
+    "data=joblib.load('..\\\\model and data\\\\data.pkl')\n",
+    "cosine_sim = joblib.load('..\\\\model and data\\\\cosine_sim.pkl')"
    ]
   },
   {
