--- a/notebook/rec.ipynb
+++ b/notebook/rec.ipynb
@@ -2,19 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "3ff6b63c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# import numpy and pandas\n",
-    "import numpy as np\n",
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 68,
    "id": "6fdbc693",
    "metadata": {},
    "outputs": [],
@@ -26,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 69,
    "id": "77da3bb6",
    "metadata": {},
    "outputs": [
@@ -265,7 +264,7 @@
        "4                               John Carter           6.1        2124  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 70,
    "id": "1ef83e9d",
    "metadata": {},
    "outputs": [
@@ -370,7 +369,7 @@
        "4  [{\"credit_id\": \"52fe479ac3a36847f813eaa3\", \"de...  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 71,
    "id": "80fb51ec",
    "metadata": {},
    "outputs": [
@@ -636,7 +635,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -649,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 72,
    "id": "954ccfb5",
    "metadata": {},
    "outputs": [
@@ -664,7 +663,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -675,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 73,
    "id": "e51e0f16",
    "metadata": {},
    "outputs": [
@@ -808,7 +807,7 @@
        "4  [{\"credit_id\": \"52fe479ac3a36847f813eaa3\", \"de...  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -821,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 74,
    "id": "d932ddc6",
    "metadata": {},
    "outputs": [],
@@ -831,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 75,
    "id": "c123763c",
    "metadata": {},
    "outputs": [
@@ -848,7 +847,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -860,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 76,
    "id": "31208ec5",
    "metadata": {},
    "outputs": [],
@@ -871,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 77,
    "id": "a1a09af9",
    "metadata": {},
    "outputs": [
@@ -902,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 78,
    "id": "73b478ed",
    "metadata": {},
    "outputs": [],
@@ -917,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 79,
    "id": "fdba4ecd",
    "metadata": {},
    "outputs": [],
@@ -927,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 80,
    "id": "74daa9ce",
    "metadata": {},
    "outputs": [],
@@ -939,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 81,
    "id": "5440144e",
    "metadata": {},
    "outputs": [],
@@ -950,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 82,
    "id": "9270a690",
    "metadata": {},
    "outputs": [
@@ -1083,7 +1082,7 @@
        "4  [{\"credit_id\": \"52fe479ac3a36847f813eaa3\", \"de...  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1094,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 83,
    "id": "13a12467",
    "metadata": {},
    "outputs": [],
@@ -1106,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 84,
    "id": "1ef78f4e",
    "metadata": {},
    "outputs": [],
@@ -1117,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 85,
    "id": "bf31dd73",
    "metadata": {},
    "outputs": [
@@ -1243,7 +1242,7 @@
        "4    [TaylorKitsch, LynnCollins, SamanthaMorton]     [AndrewStanton]  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1254,7 +1253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 86,
    "id": "627b041b",
    "metadata": {},
    "outputs": [],
@@ -1265,7 +1264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 87,
    "id": "d036c8cd",
    "metadata": {},
    "outputs": [],
@@ -1276,7 +1275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 88,
    "id": "295158e4",
    "metadata": {},
    "outputs": [],
@@ -1287,7 +1286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 89,
    "id": "bd3ca5e9",
    "metadata": {},
    "outputs": [],
@@ -1298,7 +1297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 90,
    "id": "94f98d44",
    "metadata": {},
    "outputs": [
@@ -1379,7 +1378,7 @@
        "4  John Carter is a war-weary, former military ca...  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1392,7 +1391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 91,
    "id": "cde4a64f",
    "metadata": {},
    "outputs": [],
@@ -1405,40 +1404,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 92,
    "id": "d864ae5a",
    "metadata": {},
    "outputs": [],
    "source": [
     "# import cosine_similarity and compute the cosine similarity matrix\n",
-    "from sklearn.metrics.pairwise import cosine_similarity\n",
-    "cosine_sim = cosine_similarity(tfidf_matrix, tfidf_matrix)"
+    "from sklearn.metrics.pairwise import cosine_similarity"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "258bc3e2",
    "metadata": {},
    "outputs": [],
    "source": [
     "# function to get recommendations\n",
-    "def get_recommendations(title, cosine_sim=cosine_sim):\n",
+    "def get_recommendations(title,data=data,tfidf_matrix=tfidf_matrix):\n",
     "    title = title.lower()\n",
     "    if title not in data['title'].values:\n",
     "        return \"Movie not found\"\n",
     "    \n",
     "    idx = data[data['title'] == title].index[0]\n",
-    "    sim_scores = list(enumerate(cosine_sim[idx]))\n",
-    "    sim_scores = sorted(sim_scores, key=lambda x: x[1], reverse=True)\n",
-    "    sim_scores = sim_scores[1:11]\n",
-    "    movie_indices = [i[0] for i in sim_scores]\n",
+    "    sim=cosine_similarity(tfidf_matrix[idx], tfidf_matrix)\n",
+    "    sim_score = list(enumerate(sim[0]))\n",
+    "    sim_score = sorted(sim_score, key=lambda x: x[1], reverse=True)\n",
+    "    sim_score = sim_score[1:11]\n",
+    "    movie_indices = [i[0] for i in sim_score]\n",
     "    return data['title'].iloc[movie_indices]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 94,
    "id": "d481f39c",
    "metadata": {},
    "outputs": [
@@ -1461,7 +1460,7 @@
     }
    ],
    "source": [
-    "# test the function\n",
+    "# # test the function\n",
     "inp=input(\"Enter movie name: \")\n",
     "print(get_recommendations(inp))"
    ]
