improve time and space complexity from o^2 n to O n

--- a/notebook/test.ipynb
+++ b/notebook/test.ipynb
@@ -2,41 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "c6341360",
    "metadata": {},
    "outputs": [],
    "source": [
     "# import data and cosine similarity matrix\n",
     "import joblib\n",
+    "import sys\n",
+    "sys.path.append('..')\n",
+    "from src.model import get_recommendations\n",
     "data=joblib.load('..\\\\model and data\\\\data.pkl')\n",
-    "cosine_sim = joblib.load('..\\\\model and data\\\\cosine_sim.pkl')"
+    "tfidf_matrix = joblib.load('..\\\\model and data\\\\tfidf_matrix.pkl')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "1f6b5d18",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# define function to get recommendations\n",
-    "def get_recommendations(title, cosine_sim=cosine_sim):\n",
-    "    title = title.lower()\n",
-    "    if title not in data['title'].values:\n",
-    "        return \"Movie not found\"\n",
-    "    \n",
-    "    idx = data[data['title'] == title].index[0]\n",
-    "    sim_scores = list(enumerate(cosine_sim[idx]))\n",
-    "    sim_scores = sorted(sim_scores, key=lambda x: x[1], reverse=True)\n",
-    "    sim_scores = sim_scores[1:11]\n",
-    "    movie_indices = [i[0] for i in sim_scores]\n",
-    "    return data['title'].iloc[movie_indices]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "e691ce53",
    "metadata": {},
    "outputs": [
@@ -60,7 +42,7 @@
    ],
    "source": [
     "# get user input and print recommendations\n",
-    "print(get_recommendations(input(\"Enter movie name: \")))"
+    "print(get_recommendations(input(\"Enter movie name: \"),data,tfidf_matrix))"
    ]
   },
   {
