--- a/notebook/test.ipynb
+++ b/notebook/test.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "c6341360",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model and data saved successfully.\n"
+     ]
+    }
+   ],
    "source": [
     "# import data and cosine similarity matrix\n",
     "import joblib\n",
@@ -18,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "e691ce53",
    "metadata": {},
    "outputs": [
@@ -26,17 +34,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "870                            superman ii\n",
-      "10                        superman returns\n",
-      "2435      superman iv: the quest for peace\n",
-      "1297                          superman iii\n",
-      "14                            man of steel\n",
-      "1360                                batman\n",
-      "9       batman v superman: dawn of justice\n",
-      "511                                  x-men\n",
-      "1361                                batman\n",
-      "119                          batman begins\n",
-      "Name: title, dtype: object\n"
+      "['superman ii', 'superman returns', 'superman iv: the quest for peace', 'superman iii', 'man of steel', 'batman', 'batman v superman: dawn of justice', 'x-men', 'batman', 'batman begins']\n"
      ]
     }
    ],
